add desktop version

--- a/src/html/components/footer.html
+++ b/src/html/components/footer.html
@@ -1,17 +1,4 @@
 <footer class="footer">
-
-  <div class="patterns">
-    <div class="patterns__left">
-      <div class="patterns__box"></div>
-      <div class="patterns__box"></div>
-    </div>
-    <div class="patterns__right">
-      <div class="patterns__box"></div>
-      <div class="patterns__box"></div>
-      <div class="patterns__box"></div>
-      <div class="patterns__box"></div>
-    </div>
-  </div>
        
   <div class="container">
 
@@ -19,20 +6,36 @@
 
       <div class="footer__col">
         <a class="footer__logo" href="index.html"></a>
-        <ul class="footer__menu">
-          <li><a href="catalog.html">Товары</a></li>
-          <li><a href="cert.html">Подарочные карты</a></li> 
-          <li><a href="delivery.html">Доставка</a></li>
-          <li><a href="about.html">О нас</a></li>
-          <li><a href="contacts.html">Контакты</a></li>
-        </ul>
-        <span class="footer__copyrightMobile">Azora Taste 2021 ©</span>
+        <span class="footer__copyright">2022 © Azora.global</span>
       </div>
 
       <div class="footer__col">
-        <span class="footer__info">Рецепты, специальные предложения и новости в нашем инстаграме</span>
-        <div class="footer__link"><a href="#">@azora.<span>taste</span></a></div>
-        <span class="footer__copyright">Azora Taste 2021 ©</span>
+
+        <div class="footer__menu">
+          <span class="footer__menu-title">Навигация</span>
+          <ul class="footer__menu-list">
+            <li><a href="#">Тарифы и цены</a></li>
+            <li><a href="#">Контакты</a></li>
+          </ul>
+        </div>
+
+        <div class="footer__menu">
+          <span class="footer__menu-title">Документы</span>
+          <ul class="footer__menu-list">
+            <li><a href="#">Правила работы сервиса</a></li>
+            <li><a href="#">Отказ от ответственности</a></li>
+            <li><a href="#">Политика конфиденциальности</a></li>
+          </ul>
+        </div>
+
+        <div class="footer__menu">
+          <span class="footer__menu-title">Контакты</span>
+          <ul class="footer__menu-list">
+            <li><a class="footer-phone" href="#">+351 9992 01 34</a></li>
+            <li><a class="footer-email" href="#">example@mail.ru</a></li>
+          </ul>
+        </div>
+      
       </div>
 
     </div>
