--- a/src/html/components/header.html
+++ b/src/html/components/header.html
@@ -5,7 +5,7 @@
     <div class="header__row">
 
       <div class="header__col">
-        <a class="logo" href="index.html"></a>
+        <a class="header__logo" href="#"></a>
       </div>
 
       <div class="header__col">
@@ -16,20 +16,11 @@
       </div>
 
       <div class="header__col">
-
+        <a class="header__entrans" href="#">Войти</a>
+        <a class="button button--min" href="#">Оформить посылку</a>
       </div>
 
     </div>
-
-  </div>
-
-  <div class="header__navMobile">
-    <span></span>
-    <span></span>
-    <span></span>
-  </div>
-
-  <div class="header__menuMobile">
 
   </div>
 
