--- a/src/scss/components/_main.scss
+++ b/src/scss/components/_main.scss
@@ -4,17 +4,15 @@
   padding: 0;
   outline: none;
   -webkit-appearance: none;
-  font-family: 'ArsenicaText', serif;
+  font-family: 'Raleway', sans-serif;
+  font-feature-settings: 'pnum' on, 'lnum' on;
   font-weight: 400;
   line-height: 1;
+  color: $color_dark;
 }
 
 body {
   background-color: #fff;
-
-  &.activeMobileMenu {
-    overflow: hidden;
-  }
 }
 
 html, body {
