--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -7,5 +7,13 @@
 @import "components/elements";
 @import "components/header";
 
+@import "components/homeBox";
+@import "components/tariffsPrices";
+@import "components/howWorks";
+@import "components/deliveryLongTime";
+@import "components/readyHelp";
+@import "components/benefits";
+
+
 @import "components/footer";
 @import "components/ios";
