--- a/src/scss/components/_variables.scss
+++ b/src/scss/components/_variables.scss
@@ -3,9 +3,10 @@ $cont: '.container';
 
 $time: 0.15s;
 $side: 15px;
+$side_mobile: 20px;
 
 $width_max: 1210px;
-$width_min: 320px;
+$width_min: 280px;
 
 $screen_xl: 1180px;
 $screen_lg: 890px;
