--- a/src/scss/components/_elements.scss
+++ b/src/scss/components/_elements.scss
@@ -6,6 +6,12 @@
     font-size: 28px;
     line-height: 36px;
     letter-spacing: 0.02em;
+
+    @media (max-width: $screen_md) {
+      font-weight: 700;
+      font-size: 16px;
+      line-height: 22px;
+    }
   }
 
   &--big {
