--- a/src/scss/components/_header.scss
+++ b/src/scss/components/_header.scss
@@ -10,6 +10,11 @@
     @include flex();
     min-height: $header_height;
     align-items: center;
+
+    @media (max-width: $screen_md) {
+      flex-wrap: wrap;
+      min-height: auto;
+    }
   }
 
   &__col {
@@ -18,13 +23,59 @@
     align-items: center;
     flex: 1;
 
+    .button {
+      white-space: nowrap;
+
+      @media (max-width: $screen_md) {
+        width: 24px;
+        height: 24px;
+        padding: 0;
+        border-radius: 6px;
+        overflow: hidden;
+        color: transparent;
+
+        &:before {
+          @include image('plus-white.svg', content, center);
+          position: absolute;
+          width: 12px;
+          height: 12px;
+          top: 50%;
+          left: 50%;
+          margin: -6px 0 0 -6px;
+          content: '';
+        }
+      }
+    } 
+
+    &:nth-child(1) {
+      @media (max-width: $screen_md) {
+        width: 50%;
+        flex: auto;
+        padding: 10px 0;
+      }
+    }
+
     &:nth-child(2) {
       justify-content: center;
       padding-right: 5px;
+
+      @media (max-width: $screen_md) {
+        width: 100%;
+        flex: auto;
+        justify-content: flex-start;
+        padding-right: 0;
+        order: 1;
+      }
     }
 
     &:nth-child(3) {
       justify-content: flex-end;
+
+      @media (max-width: $screen_md) {
+        width: 50%;
+        flex: auto;
+        padding: 10px 0;
+      }
     }
   }
 
@@ -43,9 +94,21 @@
   &__menu {
     @include block();
 
+    @media (max-width: $screen_md) {
+      width: calc(100% + 40px);
+      margin-left: -$side_mobile;
+      margin-right: -$side_mobile;
+      padding: 0 $side_mobile;
+      background-color: #F1F2F3;
+    }
+
     li {
       @include inline_block();
       margin: 0 8px;
+
+      @media (max-width: $screen_md) {
+        margin: 0 20px 0 0;
+      }
     }
 
     a {
@@ -53,6 +116,12 @@
       line-height: 18px;
       letter-spacing: 0.02em;
       text-decoration: none;
+
+      @media (max-width: $screen_md) {
+        display: inline-flex;
+        align-items: center;
+        min-height: 25px;
+      }
 
       &:hover {
         text-decoration: underline;
@@ -74,6 +143,21 @@
     letter-spacing: 0.02em;
     text-decoration: none;
     transition: background-color, $time;
+
+    @media (max-width: $screen_lg) {
+      margin-right: 15px;
+    }
+
+    @media (max-width: $screen_md) {
+      @include image('entrance-dark.svg', auto 12px, center);
+      width: 24px;
+      height: 24px;
+      padding: 0;
+      margin-right: 6px;
+      overflow: hidden;
+      color: transparent;
+      border: 1px solid #BDC0C6;
+    }
 
     &:hover {
       background-color: #F1F2F3;
