Add contacts page

--- a/src/html/components/header.html
+++ b/src/html/components/header.html
@@ -1,4 +1,4 @@
-<div class="header">
+<div class="header @@header">
 
   <div class="container">
 
@@ -10,8 +10,8 @@
 
       <div class="header__col">
         <ul class="header__menu">
-          <li><a href="#">Тарифы и цены</a></li>
-          <li><a href="#">Контакты</a></li> 
+          <li><a class="@@if (index == 1) {active}" href="#">Тарифы и цены</a></li>
+          <li><a class="@@if (index == 2) {active}" href="#">Контакты</a></li> 
         </ul>
       </div>
 
