--- a/src/scss/components/_header.scss
+++ b/src/scss/components/_header.scss
@@ -1,4 +1,5 @@
 .header {
+  $header: &;
   @include block();
   z-index: 100;
 
@@ -107,7 +108,7 @@
       margin: 0 8px;
 
       @media (max-width: $screen_md) {
-        margin: 0 20px 0 0;
+        margin: 0 16px 0 0;
       }
     }
 
@@ -121,10 +122,16 @@
         display: inline-flex;
         align-items: center;
         min-height: 25px;
+        font-size: 12px;
+        line-height: 16px;
       }
 
       &:hover {
         text-decoration: underline;
+      }
+
+      &.active {
+        font-weight: 700;
       }
     }
   }
@@ -161,6 +168,16 @@
 
     &:hover {
       background-color: #F1F2F3;
+    }
+  }
+
+  &--border {
+    #{$header}__row {
+      border-bottom: 1px solid #E4E4E7;
+
+      @media (max-width: $screen_md) {
+        border-bottom: none;
+      }
     }
   }
 }
