--- a/src/html/components/header.html
+++ b/src/html/components/header.html
@@ -5,13 +5,13 @@
     <div class="header__row">
 
       <div class="header__col">
-        <a class="header__logo" href="#"></a>
+        <a class="header__logo" href="index.html"></a>
       </div>
 
       <div class="header__col">
         <ul class="header__menu">
-          <li><a class="@@if (index == 1) {active}" href="#">Тарифы и цены</a></li>
-          <li><a class="@@if (index == 2) {active}" href="#">Контакты</a></li> 
+          <li><a class="@@if (index == 1) {active}" href="tariffs.html">Тарифы и цены</a></li>
+          <li><a class="@@if (index == 2) {active}" href="contacts.html">Контакты</a></li> 
         </ul>
       </div>
 
