--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -13,6 +13,7 @@
 @import "components/deliveryLongTime";
 @import "components/readyHelp";
 @import "components/benefits";
+@import "components/tariffs";
 
 
 @import "components/contacts";
