--- a/src/html/components/footer.html
+++ b/src/html/components/footer.html
@@ -14,8 +14,8 @@
         <div class="footer__menu">
           <span class="footer__menu-title">Навигация</span>
           <ul class="footer__menu-list">
-            <li><a href="#">Тарифы и цены</a></li>
-            <li><a href="#">Контакты</a></li>
+            <li><a href="tariffs.html">Тарифы и цены</a></li>
+            <li><a href="contacts.html">Контакты</a></li>
           </ul>
         </div>
 
