--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -14,6 +14,7 @@
 @import "components/readyHelp";
 @import "components/benefits";
 @import "components/tariffs";
+@import "components/destinationCountry";
 
 
 @import "components/contacts";
